2008-10-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac:
	* debian/changelog: Release 0.1.2

	* debian/conffiles: Remove empty line.

2008-10-07  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am: Add hd-shortcuts.[ch] and hd-task-shortcut.[ch].

	* src/hd-shortcuts.c:
	* src/hd-shortcuts.h: Add support for Task Shortcut configuration via
	GConf.

	* src/hd-task-shortcut.c:
	* src/hd-task-shortcut.h: Add support for Task Shortcut applets.

	* src/hildon-home.c: Add support for Task Shortcut applets.

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Release 0.1.0

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/control: Update require libhildondesktop1-dev version.

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/hildon-home.init:
	* debian/rules: Added hildon-home startup script.

2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Add gettext support.

	* src/notification-groups.conf: Add configuration file for
	notification groups.

	* src/Makefile.am: Add notification-groups.conf.

	* src/hd-incoming-event-window.c:
	* src/hd-incoming-event-window.h: Change type of time property from
	gchar* to gint64.

	* src/hd-notification-manager.c:
	* src/hd-notification-manager.h: Use the new HDNotification class from
	libhildondesktop.

	* src/hd-incoming-events.c:
	* src/hd-incoming-events.h: Use HDNotifications instead of
	notification ids. Add support for notification groups. Add support for
	notification windows for the switcher window. Add support for
	notification plugins.

	* src/hd-system-notifications.c:
	* src/hd-system-notifications.h: Use HDNotifications instead of
	notification ids.

	* src/hildon-home.c (main): Add locale support. Add support for
	notification plugins.

	* src/test-incoming-event.c (main): Update to new API.

	* src/test-notifications.py: Add test for notification groups.
